Ejercicios basicos terminados

--- a/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_1.html
+++ b/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_1.html
@@ -7,13 +7,13 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-    1. Crea un programa en el que crees 4 variables de tipo cadena con los
+    <!-- 1. Crea un programa en el que crees 4 variables de tipo cadena con los
     siguientes valores: “Hola”, “7”, “13”, y “Adios”.
     Muestra en un alert una frase que incluya comillas simples.
     Muestra en un alert que ocupe una línea las variables 1ª y 4ª separadas por un
     salto de línea.
     Muestra en un alert la suma de las variables 2ª y 3ª.
-    Muestra en un alert la suma de todas las variables.
+    Muestra en un alert la suma de todas las variables. -->
 
     <script>
         let v1 = "Hola";
