--- a/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_6.html
+++ b/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_6.html
@@ -20,7 +20,7 @@
         let total="";
         function escribir(){
             let texto = document.getElementById("texto").value;
-            total=total+texto+" ";
+            total+=texto+" ";
             document.getElementById("div").innerHTML=total;
 
 
