Avance de ejercicios

--- a/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_4.html
+++ b/Tema_2_Javascript/Ejercicio_conceptos_basicos/Ejercicio_4.html
@@ -12,10 +12,10 @@ suma y producto de los cuatro y resta de los dos primeros y división de los dos
 últimos. -->
 
    <script>
-    let n1 = 1.33;
-    let n2 = 3.77;
-    let n3 = 1.11;
-    let n4 = 6.88;
+    let n1 = parseFloat(prompt("Introduzca el primer numero"));
+    let n2 = parseFloat(prompt("Introduzca el segundo numero"));
+    let n3 = parseFloat(prompt("Introduzca el tercer numero"));
+    let n4 = parseFloat(prompt("Introduzca el cuarto numero"));
 
     document.write("Los numeros que hay son "+n1+", "+n2+", "+n3+", "+n4+"</br>");
     document.writeln("La suma de todos los numero es "+(n1+n2+n3+n4)+"</br>");
