Ejercicio de prueba validaciones

--- a/Tema_2_Javascript/Ejercicio_de_flujo/Ejercicio_3.html
+++ b/Tema_2_Javascript/Ejercicio_de_flujo/Ejercicio_3.html
@@ -25,7 +25,7 @@ mensaje diciendo que opción se seleccionó -->
      <script>
 
         function escribir(value){
-            document.getElementById("div").innerHTML = value==="Opcion 1" ? "has seleccionado la opcion 1" : value==="Opcion 2" ? "has selecciionado la opcion 2" : "has seleccionado la opcion 3";
+            document.getElementById("div").innerHTML = value==="Opcion 1" ? "has seleccionado la opcion 1" : value==="Opcion 2" ? "has seleccionado la opcion 2" : "has seleccionado la opcion 3";
         }
         
         
