Ejercicios casi hechos

--- a/Tema_2_Javascript/Ejercicios_validaciones/Ejercicio_1/Index.html
+++ b/Tema_2_Javascript/Ejercicios_validaciones/Ejercicio_1/Index.html
@@ -7,6 +7,7 @@
     <title>Ejercicio 1</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
+    <script defer src="../archivo_cookies.js"></script>
   </head>
 
   <body>
@@ -44,5 +45,6 @@
         </p>
       </fieldset>
     </form>
+    <p><label for="Errores">El numero de errores son: </label><input type="text" readonly id="error"><button onclick="restartCookie()">Reiniciar</button></p>
   </body>
 </html>
