--- a/Tema_2_Javascript/Ejercicios_validaciones/Ejercicio_4/index.html
+++ b/Tema_2_Javascript/Ejercicios_validaciones/Ejercicio_4/index.html
@@ -20,6 +20,7 @@
             <p><label>Cuenta bancaria: </label><input type="text" name="cuanta_bancaria" id="bank" maxlength="20"></p>
 
             <p><input type="submit" value="Enviar"></p>
+            <p><Button onclick="recargar()">Recargar</Button></p>
 
 
         </fieldset>
